# pyswipe

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.rst  CITATION.cff  CITATION_old.cff  LICENSE  MANIFEST.in  README.rst  TODO.md  pyproject.toml  setup.cfg
docs/: Makefile
docs/source/: conf.py  index.rst  installation.rst  model_coefficients.rst  reference.rst  usage.rst
pyswipe/: __init__.py  constants.py  mlat_scalargrid.txt  mlt_scalargrid.txt  model_utils.py  model_vector_to_txt.py  plot_utils.py  potential.txt  sh_utils.py  swipe.py
pyswipe/coefficients/: SW_OPER_MIO_SWI_2E_00000000T000000_99999999T999999_0101.txt
pyswipe/tests/: 01__plot_cpcp_vs_hemi_bt_and_clockangle.py  02__E_at_lowlatboundary.py  03__hi-c_cpcp_vs_other_studies.py  04__potential_dial_plots.py  04__potential_dial_plots__alternative_levels.py  05__emwork_dial_plots.py  05__emwork_dial_plots__alternative_levels.py  06__plot_emwork_vs_hemi_bt_and_clockangle.py  08__conductance_dial_plots__filledcell.py  09__dask_functions_for_large_input.py
