[build-system]
requires = ["setuptools >= 64", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project.urls]
homepage = "https://earth.esa.int/eogateway/activities/swipe"
repository = "https://github.com/Dartspacephysiker/pyswipe"

[project]
name = "pyswipe"
dynamic = ["version"]
authors = [
    { name = "Spencer M. Hatch", email = "spencer.hatch@ift.uib.no" },
    { name = "Karl M. Laundal"},
]
description = "Python implementation of the Swarm Ionospheric Polar Electrodynamics (Swipe) model"
readme = "README.rst"

maintainers = [
    { name = "Spencer M. Hatch", email = "spencer.hatch@ift.uib.no" },
]
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "numpy >= 1.14",
    "future >= 0.16",
    "matplotlib",
    "scipy >= 0.9",
    "toolz >= 0.8",
    "pandas >= 0.20",
    "dask",
    "apexpy >= 1.0",
    "ppigrf >= 1.0",
    "pyamps >= 1.4.0",
]

[project.optional-dependencies]
test = [
    "pytest >=6",
]
dev = [
    "pytest >=6",
    "Sphinx",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyswipe"]

[tool.setuptools_scm]
