[metadata]
name = pyswipe
author = Spencer M. Hatch and Karl M. Laundal
author_email = spencer.hatch@ift.uib.no
version = attr: pyswipe.__version__
url = https://github.com/Dartspacephysiker/pyswipe
description = Calculate and plot maps of the Swarm HEmispherically resolved Ionospheric Convection (SHEIC) model
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
license = MIT
keywords = 
    SWIPE
    Swarm Ionospheric Polar Electrodynamics
    Swarm Hi-C
    Swarm High-latitude Convection
    electric field
    spherical harmonics model
    associated Legendre polynomial
    mlt
    magnetic local time
    subsolar
    dipole coordinates
    converting
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
install_requires = 
    setuptools>=30.3.0
    future>=0.16
    numpy>=1.14
    matplotlib
    scipy>=0.9
    toolz>=0.8
    pandas>=0.20
    dask
    apexpy>=1.0
[options.package_data]
pyswipe = 
    coefficients/SW_OPER_MIO_SWI_2E_00000000T000000_99999999T999999_0101.txt

[options.packages.find]
exclude =
    tests
    docs

[options.extras_require]
dev = 
    sphinx>=1.3
    sphinx_pypi_upload
test = pytest

[build_sphinx]
source-dir = docs/source
build-dir  = docs/build
all_files  = 1

[upload_sphinx]
upload-dir = docs/build/html
